<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientSearch">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/spaceLayout"
        android:id="@+id/searchLayout">

        <TextView
            android:id="@+id/headingView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/headingMain"
            android:background="@color/Headings"
            android:gravity="center_vertical"
            android:text="@string/patient_heading"
            android:textSize="@dimen/headMainTxtSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/roomNoTxt"
            android:inputType="textPersonName|textCapSentences|textEmailAddress|textCapWords"
            android:nextFocusRight="@id/nowDate" />

        <EditText
            android:id="@+id/searchAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:autofillHints=""
            android:ems="7"
            android:hint="@string/age"
            android:inputType="number"
            android:nextFocusDown="@id/doctorName" />

        <EditText
            android:id="@+id/searchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autofillHints=""
            android:ems="6"
            android:hint="@string/pName"
            android:inputType="textPersonName|textCapSentences"
            android:nextFocusRight="@id/surnameText" />

        <EditText
            android:id="@+id/searchSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:autofillHints=""
            android:ems="7"
            android:hint="@string/pSurname"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/dateBirthText" />

        <Button
            android:id="@+id/searchPatientBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/MainBtnColor"
            android:text="@string/searchBtn" />

        <Space
            android:id="@+id/spaceLayouts"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_below="@+id/searchLayout"
            android:background="@color/Headings" />

        <ListView
            android:id="@+id/patientListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>