<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Ivf_Calculator"
    tools:showIn="@layout/activity_ivf__calculator">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calcContainerLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/volumeHead"
            android:background="@color/Headings"
            android:textSize="@dimen/subHeadTxtSize"
            android:text="@string/mlTxt"></TextView>

        <EditText
            android:layout_below="@+id/volumeHead"
            android:id="@+id/mlTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mlTxt"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_below="@id/mlTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/timeHead"
            android:background="@color/Headings"
            android:textSize="@dimen/subHeadTxtSize"
            android:text="@string/calcTimeHourTxt"></TextView>
        <TextView
            android:layout_below="@id/mlTxt"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minutesHead"
            android:background="@color/Headings"
            android:textSize="@dimen/subHeadTxtSize"
            android:text="@string/calcTimeMinTxt"></TextView>
        <EditText
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/timeHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeHourTxt"
            android:hint="@string/calcTimeHourTxt"
            android:nextFocusRight="@id/timeMinTxt"
            android:inputType="number"/>

        <EditText
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeMinTxt"
            android:layout_below="@id/minutesHead"
            android:hint="@string/calcTimeMinTxt"
            android:nextFocusDown="@id/dripRateTxt"
            android:inputType="number"></EditText>


        <TextView
            android:layout_below="@+id/timeMinTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/flowRate"
            android:background="@color/Headings"
            android:textSize="@dimen/subHeadTxtSize"
            android:text="@string/calcDripRateTxt"></TextView>

        <EditText
            android:id="@+id/dripRateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flowRate"
            android:hint="@string/calcDripRateTxt"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_below="@+id/dripRateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dripRateHead"
            android:background="@color/Headings"
            android:textSize="@dimen/subHeadTxtSize"
            android:text="@string/dropFactorTxt"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calcValueTxt"
            android:hint="@string/dropFactorTxt"
            android:inputType="number"
            android:layout_below="@id/dripRateHead"
            android:nextFocusDown="@id/calcValueTxt">
        </EditText>
    </RelativeLayout>

</LinearLayout>